[package]
name = "bevy-test"
version = "0.1.0"
authors = ["Ludwig Auer <ludwig.auer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_tiled = { git = "https://github.com/StarArawn/bevy_tiled.git", branch = "master" }
#bevy = { git = "https://github.com/bevyengine/bevy", rev = "7db48212871cf244127f45855d2c1bb6ef94c183" }
bevy = "0.1.3"
bevy_math = { git = "https://github.com/bevyengine/bevy", branch = "master" }
#anyhow = "1.0"
#glam = "0.9"
#tiled = "0.9"
